@@ -1,3 +1,8 @@
+2007-02-18  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/common/xchat.c:
+	  - Fix a potential crasher.  Bug #409224.
+
 2007-02-13  David Trowbridge  <trowbrds@gmail.com>
 
 	* src/common/tree.c:
